IHM final_integration/CAS4-SDK/VC2013/CAS4.h

/////////////////////
// Error handling  //
/////////////////////
extern int __callconv casGetError( int ADevice );
extern char* __callconv casGetErrorMessage( int AError, char* Dest, int AMaxLen );
extern int __callconv casCreateDevice( void );
extern int __callconv casCreateDeviceEx( int AInterfaceType, int AInterfaceOption );
extern int __callconv casChangeDevice( int ADevice, int AInterfaceType, int AInterfaceOption );
extern int __callconv casDoneDevice( int ADevice );
extern int __callconv casAssignDeviceEx( int ASourceDevice, int ADestDevice, int AOption );
extern int __callconv casGetDeviceTypes( void );
extern char* __callconv casGetDeviceTypeName( int AInterfaceType, char* Dest, int AMaxLen );
extern int __callconv casGetDeviceTypeOptions( int AInterfaceType );
extern int __callconv casGetDeviceTypeOption( int AInterfaceType, int AIndex );
extern char* __callconv casGetDeviceTypeOptionName( int AInterfaceType, int AInterfaceOptionIndex, char* Dest, int AMaxLen );
extern int __callconv casInitialize( int ADevice, int Perform );
extern double __callconv casGetDeviceParameter( int ADevice, int AWhat );
extern int __callconv casSetDeviceParameter( int ADevice, int AWhat, double AValue );
extern int __callconv casGetDeviceParameterString( int ADevice, int AWhat, char* ADest, int AMaxLen );
extern int __callconv casSetDeviceParameterString( int ADevice, int AWhat, char* AValue );
extern int __callconv casGetSerialNumberEx( int ADevice, int AWhat, char* Dest, int AMaxLen );
extern int __callconv casGetOptions( int ADevice );
extern void __callconv casSetOptionsOnOff( int ADevice, int AOptions, int AOnOff );
extern void __callconv casSetOptions( int ADevice, int AOptions );
//////////////////////////
// Measurement Commands //
//////////////////////////
extern int __callconv casMeasure( int ADevice );
extern int __callconv casStart( int ADevice );
extern int __callconv casFIFOHasData( int ADevice );
extern int __callconv casGetFIFOData( int ADevice );
extern int __callconv casMeasureDarkCurrent( int ADevice );
extern int __callconv casPerformAction( int ADevice, int AId ); //deprecated, use casPerformActionEx
extern int __callconv casPerformActionEx( int ADevice, int AActionID, int AParam1, int AParam2, void *AParam3 );
extern double __callconv casGetMeasurementParameter( int ADevice, int AWhat );
extern int __callconv casSetMeasurementParameter( int ADevice, int AWhat, double AValue );
extern int __callconv casClearDarkCurrent( int ADevice );
extern int __callconv casGetShutter( int ADevice );
extern void __callconv casSetShutter( int ADevice, int OnOff );
extern char* __callconv casGetFilterName( int ADevice, int AFilter, char* Dest, int AMaxLen );
extern int __callconv casGetDigitalOut( int ADevice, int APort );
extern void __callconv casSetDigitalOut( int ADevice, int APort, int OnOff );
extern int __callconv casGetDigitalIn( int ADevice, int APort );
////////////////////////////
// Parameter Set Commands //
////////////////////////////
extern int __callconv casDeleteParamSet( int ADevice, int AParamSet );
////////////////////////////////////////////
// Calibration and Configuration Commands //
////////////////////////////////////////////
extern void __callconv casCalculateCorrectedData( int ADevice );
extern void __callconv casConvoluteTransmission( int ADevice );
extern double __callconv casGetCalibrationFactors( int ADevice, int What, int Index, int Extra );
extern void __callconv casSetCalibrationFactors( int ADevice, int What, int Index, int Extra, double Value );
extern void __callconv casUpdateCalibrations( int ADevice );
extern void __callconv casSaveCalibration( int ADevice, char* AFileName );
extern void __callconv casClearCalibration( int ADevice, int What );
/////////////////////////
// Measurement Results //
/////////////////////////
extern double __callconv casGetData( int ADevice, int AIndex );
extern double __callconv casGetXArray( int ADevice, int AIndex );
extern double __callconv casGetDarkCurrent( int ADevice, int AIndex );
extern void __callconv casGetPhotInt( int ADevice, double* APhotInt, char* AUnit, int AUnitMaxLen );
extern void __callconv casGetRadInt( int ADevice, double* ARadInt, char* AUnit, int AUnitMaxLen );
extern double __callconv casGetCentroid( int ADevice );
extern void __callconv casGetPeak( int ADevice, double* x, double* y );
extern double __callconv casGetWidth( int ADevice );
extern double __callconv casGetWidthEx( int ADevice, int What ); // call only after casGetWidth
extern void __callconv casGetColorCoordinates( int ADevice, double* x, double* y, double* z, double* u, double* v1976, double* v1960 );
extern double __callconv casGetCCT( int ADevice );
extern double __callconv casGetCRI( int ADevice, int Index );
extern void __callconv casGetTriStimulus( int ADevice, double* X, double* Y, double* Z );
extern double __callconv casGetExtendedColorValues( int ADevice, int AWhat );
/////////////////////////////
// Colormetric Calculation //
/////////////////////////////
extern int __callconv casColorMetric( int ADevice );
extern int __callconv casCalculateCRI( int ADevice );
extern int __callconv cmXYToDominantWavelength( double x, double y, double IllX, double IllY, double* LambdaDom, double* Purity );
extern int __callconv casCalculateLambdaDom( int ADevice, double IllX, double IllY, double* LambdaDom, double* Purity );
///////////////
// Utilities //
///////////////
extern char* __callconv casGetDLLFileName( char* Dest, int AMaxLen );
extern char* __callconv casGetDLLVersionNumber( char* Dest, int AMaxLen );
extern int __callconv casSaveSpectrum( int ADevice, char* AFileName );
extern double __callconv casGetExternalADCValue( int ADevice, int AIndex ); //obsolete; use mpidCurrentCCDTemperature
extern void __callconv casSetStatusLED( int ADevice, int AWhat );
extern int __callconv casNmToPixel( int ADevice, double nm );
extern double __callconv casPixelToNm( int ADevice, int APixel );
extern int __callconv casCalculateTOPParameter( int ADevice, int AAperture, double ADistance, double* ASpotSize, double* AFieldOfView);
////////////////
// MultiTrack //
////////////////
extern int __callconv casMultiTrackInit( int ADevice, int ATracks );
extern int __callconv casMultiTrackDone( int ADevice );
extern int __callconv casMultiTrackCount( int ADevice ); //obsolete; use dpidMultiTrackCount
extern int __callconv casMultiTrackCopyData( int ADevice, int ATrack );
extern int __callconv casMultiTrackSaveData( int ADevice, char* AFileName );
extern int __callconv casMultiTrackLoadData( int ADevice, char* AFileName );
///////////////////////////
// Spectrum Manipulation //
///////////////////////////
extern void __callconv casSetData( int ADevice, int AIndex, double Value );
extern void __callconv casSetXArray( int ADevice, int AIndex, double Value );
extern void __callconv casSetDarkCurrent( int ADevice, int AIndex, double Value );
extern float* __callconv casGetDataPtr( int ADevice );
extern float* __callconv casGetXPtr( int ADevice );
extern void __callconv casLoadTestData( int ADevice, char* AFileName );
//////////////////////////
// Deprecated methods!! //
//////////////////////////
extern int __callconv casGetInitialized( int ADevice);
extern int __callconv casGetDeviceType( int ADevice );
extern int __callconv casGetDeviceOption( int ADevice );
extern int __callconv casGetAdcBits( int ADevice );
extern int __callconv casGetAdcRange( int ADevice );
extern char* __callconv casGetSerialNumber( int ADevice, char* Dest, int AMaxLen );
extern int __callconv casGetDeadPixels( int ADevice);
extern int __callconv casGetVisiblePixels( int ADevice);
extern int __callconv casGetPixels( int ADevice);
extern int __callconv casGetModel( int ADevice);
extern double __callconv casGetAmpOffset( int ADevice);
extern int __callconv casGetIntTimeMin( int ADevice );
extern int __callconv casGetIntTimeMax( int ADevice );
extern int __callconv casBackgroundMeasure( int ADevice );
extern int __callconv casGetIntegrationTime( int ADevice );
extern void __callconv casSetIntegrationTime( int ADevice, int Value );
extern int __callconv casGetAccumulations( int ADevice );
extern void __callconv casSetAccumulations( int ADevice, int Value );
extern double __callconv casGetAutoIntegrationLevel( int ADevice );
extern void __callconv casSetAutoIntegrationLevel( int ADevice, double ALevel );
extern int __callconv casGetAutoIntegrationTimeMax( int ADevice );
extern void __callconv casSetAutoIntegrationTimeMax( int ADevice, int AMaxTime );
extern int __callconv casClearBackground( int ADevice );
extern int __callconv casGetNeedBackground( int ADevice );
extern void __callconv casSetNeedBackground( int ADevice, int Value );
extern int __callconv casGetTop100( int ADevice );
extern void __callconv casSetTop100( int ADevice, int AIndex );
extern double __callconv casGetTop100Distance( int ADevice );
extern void __callconv casSetTop100Distance( int ADevice, double ADistance );
extern int __callconv casGetFilter( int ADevice );
extern void __callconv casSetFilter( int ADevice, int AFilter );
extern int __callconv casGetActualFilter( int ADevice );
extern int __callconv casGetNewDensityFilter( int ADevice );
extern void __callconv casSetNewDensityFilter( int ADevice, int AFilter );
extern int __callconv casGetForceFilter( int ADevice );
extern void __callconv casSetForceFilter( int ADevice, int AForce );
extern int __callconv casGetParamSets( int ADevice );
extern void __callconv casSetParamSets( int ADevice, int Value );
extern int __callconv casGetParamSet( int ADevice );
extern void __callconv casSetParamSet( int ADevice, int Value );
extern char* __callconv casGetCalibrationFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetCalibrationFileName( int ADevice, char* Value );
extern char* __callconv casGetConfigFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetConfigFileName( int ADevice, char* Value );
extern char* __callconv casGetTransmissionFileName( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetTransmissionFileName( int ADevice, char* Value );
extern int __callconv casValidateConfigAndCalibFile( int ADevice );
extern char* __callconv casGetCalibrationUnit( int ADevice, char* Dest, int AMaxLen );
extern void __callconv casSetCalibrationUnit( int ADevice, char* Value );
extern double __callconv casGetBackground( int ADevice, int AIndex );
extern void __callconv casSetBackground( int ADevice, int AIndex, double Value );
extern int __callconv casGetMaxAdcValue( int ADevice );
extern int __callconv casGetCheckStart( int ADevice );
extern void __callconv casSetCheckStart( int ADevice, int Value );
extern int __callconv casGetCheckStop( int ADevice );
extern void __callconv casSetCheckStop( int ADevice, int Value );
extern double __callconv casGetColormetricStart( int ADevice );
extern void __callconv casSetColormetricStart( int ADevice, double Value );
extern double __callconv casGetColormetricStop( int ADevice );
extern void __callconv casSetColormetricStop( int ADevice, double Value );
extern int __callconv casGetObserver( void );
extern void __callconv casSetObserver( int ADevice );
extern double __callconv casGetSkipLevel( int ADevice );
extern void __callconv casSetSkipLevel( int ADevice, double ASkipLevel );
extern int __callconv casGetSkipLevelEnabled( int ADevice );
extern void __callconv casSetSkipLevelEnabled( int ADevice, int ASkipLevel );
extern int __callconv casGetTriggerSource( int ADevice );
extern void __callconv casSetTriggerSource( int ADevice, int Value );
extern int __callconv casGetLine1FlipFlop( int ADevice );
extern void __callconv casSetLine1FlipFlop( int ADevice, int Value );
extern int __callconv casGetTimeout( int ADevice );
extern void __callconv casSetTimeout( int ADevice, int Value );
extern int __callconv casGetFlash( int ADevice );
extern void __callconv casSetFlash( int ADevice, int Value );
extern int __callconv casGetFlashDelayTime( int ADevice );
extern void __callconv casSetFlashDelayTime( int ADevice, int Value );
extern int __callconv casGetFlashOptions( int ADevice );
extern void __callconv casSetFlashOptions( int ADevice, int Value );
extern int __callconv casGetDelayTime( int ADevice );
extern void __callconv casSetDelayTime( int ADevice, int Value );
extern int __callconv casGetStartTime( int ADevice );
extern int __callconv casGetACQTime( int ADevice );
extern int __callconv casReadWatch( int ADevice );
extern int __callconv casStopTime( int ADevice, int ARefTime );
extern void __callconv casMultiTrackCopySet( int ADevice );
extern int __callconv casMultiTrackReadData( int ADevice, int ATrack );