IHM final_integration/CAS4-SDK/Delphi/CAS4DLL.pas


//deprecated methods!!
function casGetInitialized(ADevice: Integer): Integer; stdcall;
function casGetDeviceType(ADevice: Integer): Integer; stdcall;
function casGetDeviceOption(ADevice: Integer ): Integer; stdcall;
function casGetAdcBits(ADevice: Integer): Integer; stdcall;
function casGetAdcRange(ADevice: Integer): Integer; stdcall;
function casGetSerialNumber(ADevice: Integer; Dest: PAnsiChar; AMaxLen: Integer): PAnsiChar; stdcall;
function casGetDeadPixels(ADevice: Integer): Integer; stdcall;
function casGetVisiblePixels(ADevice: Integer): Integer; stdcall;
function casGetPixels(ADevice: Integer): Integer; stdcall;
function casGetModel(ADevice: Integer): Integer; stdcall;
function casGetAmpOffset(ADevice: Integer): Double; stdcall;
function casGetIntTimeMin(ADevice: Integer): Integer; stdcall;
function casGetIntTimeMax(ADevice: Integer): Integer; stdcall;
function casBackgroundMeasure(ADevice: Integer): Integer; stdcall;
function casGetIntegrationTime(ADevice: Integer): Integer; stdcall;
procedure casSetIntegrationTime(ADevice: Integer; Value: Integer); stdcall;
function casGetAccumulations(ADevice: Integer): Integer; stdcall;
procedure casSetAccumulations(ADevice: Integer; Value: Integer); stdcall;
function casGetAutoIntegrationLevel(ADevice: Integer): Double; stdcall;
procedure casSetAutoIntegrationLevel(ADevice: Integer; ALevel: Double); stdcall;
function casGetAutoIntegrationTimeMax(ADevice: Integer): Integer; stdcall;
procedure casSetAutoIntegrationTimeMax(ADevice: Integer; AMaxTime: Integer); stdcall;
function casClearBackground(ADevice: Integer): Integer; stdcall;
function casGetNeedBackground(ADevice: Integer): Integer; stdcall;
procedure casSetNeedBackground(ADevice: Integer; AValue: Integer); stdcall;
function casGetTop100(ADevice: Integer): Integer; stdcall;
procedure casSetTop100(ADevice: Integer; AIndex: Integer); stdcall;
function casGetTop100Distance(ADevice: Integer): Double; stdcall;
procedure casSetTop100Distance(ADevice: Integer; ADistance: Double); stdcall;
function casGetFilter(ADevice: Integer): Integer; stdcall;
procedure casSetFilter(ADevice: Integer; AFilter: Integer); stdcall;
function casGetActualFilter(ADevice: Integer): Integer; stdcall;
function casGetNewDensityFilter(ADevice: Integer): Integer; stdcall;
procedure casSetNewDensityFilter(ADevice: Integer; AFilter: Integer); stdcall;
function casGetForceFilter(ADevice: Integer): Integer; stdcall;
procedure casSetForceFilter(ADevice: Integer; AForce: Integer); stdcall;
function casGetParamSets(ADevice: Integer): Integer; stdcall;
procedure casSetParamSets(ADevice: Integer; Value: Integer); stdcall;
function casGetParamSet(ADevice: Integer): Integer; stdcall;
procedure casSetParamSet(ADevice: Integer; Value: Integer); stdcall;
function casGetCalibrationFileName(ADevice: Integer; Dest: PAnsiChar; AMaxLen: Integer): PAnsiChar; stdcall;
procedure casSetCalibrationFileName(ADevice: Integer; Value: PAnsiChar); stdcall;
function casGetConfigFileName(ADevice: Integer; Dest: PAnsiChar; AMaxLen: Integer): PAnsiChar; stdcall;
procedure casSetConfigFileName(ADevice: Integer; Value: PAnsiChar); stdcall;
function casGetTransmissionFileName(ADevice: Integer; Dest: PAnsiChar; AMaxLen: Integer): PAnsiChar; stdcall;
procedure casSetTransmissionFileName(ADevice: Integer; Value: PAnsiChar); stdcall;
function casValidateConfigAndCalibFile(ADevice: Integer): Integer; stdcall;
function casGetCalibrationUnit(ADevice: Integer; Dest: PAnsiChar; AMaxLen: Integer): PAnsiChar; stdcall;
procedure casSetCalibrationUnit(ADevice: Integer; Value: PAnsiChar); stdcall;
function casGetBackground(ADevice: Integer; AIndex: Integer): Double; stdcall;
procedure casSetBackground(ADevice: Integer; AIndex: Integer; Value: Double); stdcall;
function casGetMaxAdcValue(ADevice: Integer): Integer; stdcall;
function casGetCheckStart(ADevice: Integer): Integer; stdcall;
procedure casSetCheckStart(ADevice: Integer; Value: Integer); stdcall;
function casGetCheckStop(ADevice: Integer): Integer; stdcall;
procedure casSetCheckStop(ADevice: Integer; Value: Integer); stdcall;
function casGetColormetricStart(ADevice: Integer): Double; stdcall;
procedure casSetColormetricStart(ADevice: Integer; Value: Double); stdcall;
function casGetColormetricStop(ADevice: Integer): Double; stdcall;
procedure casSetColormetricStop(ADevice: Integer; Value: Double); stdcall;
function casGetObserver: Integer; stdcall;
procedure casSetObserver(AObserver: Integer); stdcall;
function casGetSkipLevel(ADevice: Integer): Double; stdcall;
procedure casSetSkipLevel(ADevice: Integer; ASkipLevel: Double); stdcall;
function casGetSkipLevelEnabled(ADevice: Integer): Integer; stdcall;
procedure casSetSkipLevelEnabled(ADevice: Integer; ASkipLevel: Integer); stdcall;
function casGetTriggerSource(ADevice: Integer): Integer; stdcall;
procedure casSetTriggerSource(ADevice: Integer; Value: Integer); stdcall;
function casGetLine1FlipFlop(ADevice: Integer): Integer; stdcall;
procedure casSetLine1FlipFlop(ADevice: Integer; Value: Integer); stdcall;
function casGetTimeout(ADevice: Integer): Integer; stdcall;
procedure casSetTimeout(ADevice: Integer; Value: Integer); stdcall;
function casGetFlash(ADevice: Integer): Integer; stdcall;
procedure casSetFlash(ADevice: Integer; Value: Integer); stdcall;
function casGetFlashDelayTime(ADevice: Integer): Integer; stdcall;
procedure casSetFlashDelayTime(ADevice: Integer; Value: Integer); stdcall;
function casGetFlashOptions(ADevice: Integer): Integer; stdcall;
procedure casSetFlashOptions(ADevice: Integer; Value: Integer); stdcall;
function casGetDelayTime(ADevice: Integer): Integer; stdcall;
procedure casSetDelayTime(ADevice: Integer; Value: Integer); stdcall;
function casGetStartTime(ADevice: Integer): Integer; stdcall;
function casGetACQTime(ADevice: Integer): Integer; stdcall;
function casReadWatch(ADevice: Integer): Integer; stdcall;
function casStopTime(ADevice: Integer; ARefTime: Integer): Integer; stdcall;
procedure casMultiTrackCopySet(ADevice: Integer); stdcall;
function casMultiTrackReadData(ADevice: Integer; ATrack: Integer): Integer; stdcall;

const
  {$IFDEF WIN64}
  ModulName = 'CAS4x64.dll';
  {$ELSE}
  ModulName = 'CAS4.dll';
  {$ENDIF}

implementation

uses
  Windows;

const
{$IFDEF UNICODE}
  ExportSuffix = 'W';
{$ELSE}
  ExportSuffix = '';
{$ENDIF}

//Error handling
function casGetError; external ModulName;
function casGetErrorMessage; external ModulName name 'casGetErrorMessage' + ExportSuffix;

//Device Handles and Interfaces
function casCreateDevice; external ModulName;
function casCreateDeviceEx; external ModulName;
function casChangeDevice; external ModulName;
function casDoneDevice; external ModulName;
function casAssignDeviceEx; external ModulName;

function casGetDeviceTypes; external ModulName;
function casGetDeviceTypeName; external ModulName name 'casGetDeviceTypeName' + ExportSuffix;
function casGetDeviceTypeOptions; external ModulName;
function casGetDeviceTypeOption; external ModulName;
function casGetDeviceTypeOptionName; external ModulName name 'casGetDeviceTypeOptionName' + ExportSuffix;

//Initialization
function casInitialize; external ModulName;

//Instrument properties
function casGetDeviceParameter; external ModulName;
function casSetDeviceParameter; external ModulName;
function casGetDeviceParameterString; external ModulName name 'casGetDeviceParameterString' + ExportSuffix;
function casSetDeviceParameterString; external ModulName name 'casSetDeviceParameterString' + ExportSuffix;
function casGetSerialNumberEx; external ModulName name 'casGetSerialNumberEx' + ExportSuffix;
function casGetOptions; external ModulName;
procedure casSetOptionsOnOff; external ModulName;
procedure casSetOptions; external ModulName;

// Measurement commands
function casMeasure; external ModulName;

function casStart; external ModulName;
function casFIFOHasData; external ModulName;
function casGetFIFOData; external ModulName;

function casMeasureDarkCurrent; external ModulName;

function casPerformAction; external ModulName;
function casPerformActionEx; external ModulName;

//Measurement Parameter
function casGetMeasurementParameter; external ModulName;
function casSetMeasurementParameter; external ModulName;
function casClearDarkCurrent; external ModulName;
function casDeleteParamSet; external ModulName;

//Filter and Shutter commands
function casGetShutter; external ModulName;
procedure casSetShutter; external ModulName;
function casGetFilterName; external ModulName name 'casGetFilterName' + ExportSuffix;
function casGetDigitalOut; external ModulName;
procedure casSetDigitalOut; external ModulName;
function casGetDigitalIn; external ModulName;

//Calibration and Configuration Commands
procedure casCalculateCorrectedData; external ModulName;
procedure casConvoluteTransmission; external ModulName;
function casGetCalibrationFactors; external ModulName;
procedure casSetCalibrationFactors; external ModulName;
procedure casUpdateCalibrations; external ModulName;
procedure casSaveCalibration; external ModulName name 'casSaveCalibration' + ExportSuffix;
procedure casClearCalibration; external ModulName;

//Measurement Results
function casGetData; external ModulName;
function casGetXArray; external ModulName;
function casGetDarkCurrent; external ModulName;
procedure casGetPhotInt; external ModulName name 'casGetPhotInt' + ExportSuffix;
procedure casGetRadInt; external ModulName name 'casGetRadInt' + ExportSuffix;
function casGetCentroid; external ModulName;
procedure casGetPeak; external ModulName;
function casGetWidth; external ModulName;
function casGetWidthEx; external ModulName;
procedure casGetColorCoordinates; external ModulName;
function casGetCCT; external ModulName;
function casGetCRI; external ModulName;
procedure casGetTriStimulus; external ModulName;
function casGetExtendedColorValues; external ModulName;

//Colormetric Calculation
function casColorMetric; external ModulName;
function casCalculateCRI; external ModulName;
function cmXYToDominantWavelength; external ModulName;
function casCalculateLambdaDom; external ModulName;

//Utilities
function casGetDLLFileName; external ModulName name 'casGetDLLFileName' + ExportSuffix;
function casGetDLLVersionNumber; external ModulName name 'casGetDLLVersionNumber' + ExportSuffix;
function casSaveSpectrum; external ModulName name 'casSaveSpectrum' + ExportSuffix;
function casGetExternalADCValue; external ModulName;
procedure casSetStatusLED; external ModulName;
function casNmToPixel; external ModulName;
function casPixelToNm; external ModulName;
function casCalculateTOPParameter; external ModulName;

//MultiTrack
function casMultiTrackInit; external ModulName;
function casMultiTrackDone; external ModulName;
function casMultiTrackCount; external ModulName;
function casMultiTrackCopyData; external ModulName;
function casMultiTrackSaveData; external ModulName name 'casMultiTrackSaveData' + ExportSuffix;
function casMultiTrackLoadData; external ModulName name 'casMultiTrackLoadData' + ExportSuffix;

//Spectrum Manipulation
procedure casSetData; external ModulName;
procedure casSetXArray; external ModulName;
procedure casSetDarkCurrent; external ModulName;
function casGetDataPtr; external ModulName;
function casGetXPtr; external ModulName;
procedure casLoadTestData; external ModulName name 'casLoadTestData' + ExportSuffix;
